name:                 rover
version:              0.1.0.0
homepage:             https://github.com/tyrcho/haskell-rover-kata
author:               Michel Daviot
maintainer:           michel@daviot.info
build-type:           Simple
cabal-version:        >=1.18

library
  default-language: Haskell2010
  exposed-modules: Directions, Rover
  hs-source-dirs:  src
  build-depends:   base

executable rover
  build-depends:    base,
                    rover
  default-language: Haskell2010
  hs-source-dirs:   executable
  main-is:          Main.hs

test-suite rover-tests
  build-depends:    base,
                    rover,
                    test-framework,
                    test-framework-hunit,
                    HUnit
  default-language: Haskell2010
  hs-source-dirs:   tests
  main-is:          MarsRoverTests.hs
  type:             exitcode-stdio-1.0